@@ -233,8 +233,15 @@ void NumberFormatterTest::testFormatFloat()
 	assert(NumberFormatter::format(-12.25, 10, 4) == "  -12.2500");
 	assert(NumberFormatter::format(-12.25, 10, 2) == "    -12.25");
 
-	double dTest = 50.0;
-	assert (NumberFormatter::format(dTest, 3) == "50.000");
+
+	assert (NumberFormatter::format(50.0, 3) == "50.000");
+	assert (NumberFormatter::format(50.0f, 3) == "50.000");
+	assert (NumberFormatter::format(50.123, 3) == "50.123");
+	assert (NumberFormatter::format(50.123f, 3) == "50.123");
+	assert (NumberFormatter::format(50.123, 0) == "50");
+	assert (NumberFormatter::format(50.123f, 0) == "50");
+	assert (NumberFormatter::format(50.546, 0) == "50");
+	assert (NumberFormatter::format(50.546f, 0) == "50");
 }
 
 
